# RSP-LectureCode

./: .gitignore  test.urdf
System Programming Note/: CONTENTS.md  Debug Log.md  ROS_Short_Guidance.md  WEEK 00 - SYLLUBUS.md  WEEK 02 - TF.md  WEEK 09 - Orocos Real-Time Toolkit (RTT).md  WEEK 10 - reflexxes.md  WEEK 12 - NAVIGATION STACK.md  WEEK 15 - Python Package copy.md  WEEK 15 - Python Package.md  WEEK 16 - Different ROS Ver..md  WEEK 16 - Python Package.md
assignment5/edumip_description/launch/: edumip_startup.launch  edumip_upload.launch
assignment5/edumip_gazebo/: CMakeLists.txt  package.xml
assignment6/edumip_balance_ros_gazebo_plugin/: CMakeLists.txt
assignment6/edumip_msgs/: package.xml
assignment6/tot_msgs/: CMakeLists.txt  package.xml
note/: CONTENTS.md  Debug Log.md  WEEK 01 - BASIC OPERATION.md  WEEK 02 - TF.md  WEEK 03 - LAUNCH & ROSBAG.md  WEEK 04 - URDF & XARCO.md  WEEK 05 - ACTION LIB.md  WEEK 06 - GAZEBO.md  WEEK 13 - MoveIt.md  WEEK 14 - RQT.md  WEEK 15 - Python Package.md
src/System Programming Note/: Appendix.md  CONTENTS.md  WEEK 01 - BASIC OPERATION.md  WEEK 02 - TF.md  WEEK 03 - LAUNCH & ROSBAG .md  WEEK 04 - URDF & XARCO.md  WEEK 05- ACTION LIB.md  WEEK 06 - GAZEBO.md  WEEK 07 - KDL.md  WEEK 08 - UR.md  WEEK 11 - ROS control.md
src/assignment8/: CMakeLists.txt  package.xml
src/rsp/: node.cpp
src/rsp/ecn_sonar-master/: CMakeLists.txt  README.md  package.xml
src/rsp/ecn_sonar-master/launch/: block.launch  block_display.launch  sonar.launch  sonar_display.launch
src/rsp/ecn_sonar-master/old/: Trajectory_plot.cpp  slam_node.cpp
src/rsp/ecn_sonar-master/src/: display_block_node.cpp  display_block_node_2.cpp  display_node.cpp  mapping_node_scaled.cpp  slam_node_2.cpp  waypoint_sonar.cpp
src/rsp/ecn_sonar-master/urdf/: auv_block.xacro  auv_sonar.xacro  container.dae  container.sdf
src/rsp/my_action/: package.xml  (+1 more)
src/rsp_sensor/: CMakeLists.txt  package.xml
src/rtt_rsp/: CMakeLists.txt  package.xml
src/ur_velocity_interface/: CMakeLists.txt  package.xml
(+95 files in other folders)
