<?xml version="1.0"?>
<package format="2">
  <name>ecn_sonar</name>
  <version>0.0.0</version>
  <description>The ecn_sonar package</description>


  <maintainer email="olivier@todo.todo">olivier</maintainer>


  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
